2004-09-20  Not Zed  <NotZed@Ximian.com>

	** See bug #65329.

	* em-folder-tree-model.c (emft_is_special_local_folder): added
	helper for finding local folders for translation.
	(em_folder_tree_model_set_folder_info): translate the special
	local folder names.

	* mail-component.c: mark standard folder names for translation.

2004-09-23  Not Zed  <NotZed@Ximian.com>

	** See bug #65058 (again again).

	* em-format-html.c (efh_text_html): calculate our location uri
	ourselves (content id).

	* em-format.c (em_format_add_puri): if we have no content-location
	key, don't fallback to any container's location.

2004-09-23  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_get_folder_info__desc): describe the
	get-folder process.  This also makes it cancellable.

	** See bug #64972.

	* em-composer-utils.c (em_utils_reply_to_message): pass the folder
	to guess_account.

2004-09-03  Not Zed  <NotZed@Ximian.com>

	** See bug #65058.

	* em-format-html.c (efh_image): use the content-id rather than
	the uri for tracking our image reference.  Makes more
	sense anyway, its guaranteed unique.

2004-09-21  David Malcolm  <dmalcolm@redhat.com>

	* em-folder-tree-model.c (em_folder_tree_model_set_selected): Fix
	a typo setting the root node.

2004-09-09  Jeffrey Stedfast  <fejj@novell.com>

	* em-message-browser.c (emmb_set_message): Ignore the
	emfv->mark_seen for deciding whether or not to mark the message as
	seen. Fixes bug #65448.

2004-09-08  Not Zed  <NotZed@Ximian.com>

	** See bug #60515.

	* mail-account-gui.c (sig_fill_menu): connect to the activate
	signal for the none item.

2004-09-01  Jeffrey Stedfast  <fejj@novell.com>

	Fix for bug #63377 and prevention of similar cases.

	* em-format.c (emf_finalise): Free the default_charset.
	(emf_format_clone): Clone the default_charset - this prevents the
	particular crash described in bug #63377.

	* em-utils.c (em_utils_message_to_html): If source is NULL, set