@@ -1,3 +1,11 @@
+2004-09-24  Not Zed  <NotZed@Ximian.com>
+
+	** See bug #66706.
+
+	* em-subscribe-editor.c: add a sequence number to EMSubscribe and
+	the subscribe_msg structures.  NOOP if the sequence has changed in
+	all callbacks.  up the sequence number when we refresh.
+
 2004-09-20  Not Zed  <NotZed@Ximian.com>
 
 	** See bug #65329.
